--- a/tasks/static/css/base.css
+++ b/tasks/static/css/base.css
@@ -4,23 +4,27 @@ html {
 
 body {
     font-family: sans-serif;
-    background-color: rebeccapurple;
     height: 100%;
     margin: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #f1f1f1;
 }
 
 form {
     display: flex;
     flex-direction: column;
-
-    background-color: aquamarine;
 }
 
 input {
     margin: 10px;
+}
+
+.text {
+    display: flex;
+    flex-direction: row;
 }
 
 .wrap {
@@ -28,16 +32,18 @@ input {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    background-color: antiquewhite;
-    padding: 0;
-    margin: 0;
 }
 
 input {
-    background-color: aliceblue;
     border: none;
-    padding: 10px 100px 10px 10px;
     border-radius: 5px;
+    height: 40px;
+    background-color: white;
+}
+
+#id_username,
+#id_password {
+    padding: 10px 100px 10px 10px;
 }
 
 .sign-btn {
