--- a/tasks/templates/tasks/main_page.html
+++ b/tasks/templates/tasks/main_page.html
@@ -46,7 +46,7 @@
         </div>
         <div class="buttons">
             <input type="submit" class="add" value="add"/>
-            <a class="cancel" id='cancel edit' href="/">Cancel</a>
+            <a class="cancel" id='cancel edit' href="{{ request.META.HTTP_REFERER }}">Cancel</a>
             <select name="priority" id="">
                 {#Todo: fix this bad code#}
                 {% if task.priority == '0' %}
