--- a/tasks/static/css/main_page.css
+++ b/tasks/static/css/main_page.css
@@ -46,7 +46,7 @@ a {
     flex-direction: column;
     color: #546e7a;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 600;
     margin-bottom: 20px;
 }
 
@@ -56,8 +56,13 @@ a {
 }
 
 .period-item span {
+    margin-left: 10px;
     font-size: 12px;
     color: black;
+}
+
+.period-item a {
+    color: #575155;
 }
 
 .projects-block {
