--- a/tasks/templates/tasks/base_main_page.html
+++ b/tasks/templates/tasks/base_main_page.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="main-header">
-    <div class="logo"><a href="/task/all">TODO</a></div>
+    <div class="logo"><a href="/">TODO</a></div>
     <div class="active-user">{{ user }}</div>
     {% if not user.is_authenticated %}
         <a href="{% url 'login' %}">Log In</a>
