--- a/tasks/static/css/base.css
+++ b/tasks/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Roboto, sans-serif;
     height: 100%;
     margin: 0;
     display: flex;
@@ -16,6 +16,7 @@ body {
 form {
     display: flex;
     flex-direction: column;
+
 }
 
 input {
@@ -31,25 +32,22 @@ input {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    align-items: center;
-}
-
-input {
-    border: none;
-    border-radius: 5px;
-    height: 40px;
-    background-color: white;
+    align-items: stretch;
 }
 
 #id_username,
-#id_password {
+#id_password,
+#id_password1,
+#id_password2 {
+    background-color: white;
+    border: none;
     padding: 10px 100px 10px 10px;
+    border-radius: 5px;
 }
 
-.sign-btn {
-    background-color: aliceblue;
+.accept-btn {
+    background-color: white;
     border: none;
-    padding: 10px;
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
+    padding: 10px 0px;
 }
