--- a/templates/registration/signin.html
+++ b/templates/registration/signin.html
@@ -7,7 +7,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form }}
-            <input type="submit" value="Sign Up"/>
+            <input class="accept-btn" type="submit" value="Sign Up"/>
         </form>
     </div>
 {% endblock %}
