change signin to signup

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,8 +11,8 @@
             <td>{{ form.password }}</td>
             <input class="accept-btn" type="submit" value="login"/>
         </form>
-        <form method="get" action="/accounts/signin">
-            <input class="accept-btn" type="submit" value="Sign In"/>
+        <form method="get" action="/accounts/signup">
+            <input class="accept-btn" type="submit" value="Sign Up"/>
         </form>
     </div>
     {% if form.errors %}
