update css, html update readme.md

--- a/tasks/templates/tasks/base_main_page.html
+++ b/tasks/templates/tasks/base_main_page.html
@@ -78,7 +78,7 @@
         </a>
         <form class=""></form>
     </main>
-    <div class="right-sidebar">12</div>
+    <div class="right-sidebar"></div>
 </section>
 <script src="{% static 'js/main_page.js' %}"></script>
 </body>
