--- a/tasks/static/css/main_page.css
+++ b/tasks/static/css/main_page.css
@@ -75,22 +75,27 @@ a {
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .project {
-    padding: 5px 15px;
+    flex-grow: 1;
+    padding: 5px 5px 5px 15px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 .project-tag {
     display: inline-block;
+    flex-shrink: 0;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     margin-right: 15px;
+}
+
+.project-name {
+    flex-grow: 1;
 }
 
 /* Icon configuration task start */
@@ -152,7 +157,6 @@ a {
     justify-content: space-around;
     cursor: pointer;
     opacity: 0;
-    position: relative;
     transition: opacity 0.2s ease-in-out;
 }
 
@@ -198,7 +202,7 @@ a {
 /* Icon configuration end */
 
 .task-counter {
-    margin-left: 15px;
+    margin: 0 5px;
     font-size: 12px;
     color: #000000;
 }
@@ -242,6 +246,7 @@ a {
     background-color: blue;
     border: 1px solid black;
     margin-right: 10px;
+    flex-shrink: 0;
 }
 
 .task {
@@ -250,6 +255,15 @@ a {
     align-items: center;
     border-bottom: 1px solid black;
     padding: 5px;
+}
+
+.task-name.archive-task {
+    text-decoration: line-through;
+}
+
+.task-name {
+    flex-basis: 75%;
+    flex-shrink: 0;
 }
 
 .task-date-end {
